--- a/src/styles/containers/Header.scss
+++ b/src/styles/containers/Header.scss
@@ -45,10 +45,11 @@
     }
     
     &_icon {
-      background-image: url('../../assets/images/icons/logo_label.svg');
-      background-repeat: no-repeat;
-      background-size: contain;
-      background-position: 50%;
+      @extend .logo;
+      // background-image: url('../../assets/images/icons/logo_label.svg');
+      // background-repeat: no-repeat;
+      // background-size: contain;
+      // background-position: 50%;
       display: block;
       height: 34px;
       width: 108px;
