home working with tabs

--- a/src/styles/containers/Header.scss
+++ b/src/styles/containers/Header.scss
@@ -1,7 +1,6 @@
 @import '../core/base';
 @import '../mixins/flex';
 @import '../modules/menu';
-@import '../modules/logo';
 @import '../modules/buttons';
 
 .header {
@@ -45,11 +44,11 @@
     }
     
     &_icon {
-      @extend .logo;
-      // background-image: url('../../assets/images/icons/logo_label.svg');
-      // background-repeat: no-repeat;
-      // background-size: contain;
-      // background-position: 50%;
+      // @extend .logo;
+      background-image: url('../../assets/images/icons/logo_label.svg');
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: 50%;
       display: block;
       height: 34px;
       width: 108px;
