--- a/src/styles/modules/_logo.scss
+++ b/src/styles/modules/_logo.scss
@@ -1,5 +1,5 @@
 .logo {
-  //background-image: url('../../assets/images/icons/logo_label.svg');
+  background-image: url('/assets/images/icons/logo_label.svg');
   background-repeat: no-repeat;
   background-size: contain;
   background-position: 50%;
@@ -8,7 +8,7 @@
 .icon-right{
   background-color: #fff !important;
   min-height: 40px !important;
-  //background-image: url('assets/images/icons/arrow-right.svg') !important;
+  background-image: url('../../assets/images/icons/arrow-right.svg') !important;
   background-repeat: no-repeat;
   background-position: center right;
 }
