--- a/src/styles/pages/CurrentGame.scss
+++ b/src/styles/pages/CurrentGame.scss
@@ -203,19 +203,6 @@
     margin: 0 !important;
     padding: 0 !important;
   }
-  // &__tabs{
-  //   &_iconLabelWrapper{
-  //     flex-direction: row;
-  //     margin-bottom: 0;
-  //     justify-content: left;
-  //     svg{
-  //       margin-bottom: 0 !important;
-  //     }
-  //   }
-  //   &_indicator{
-  //     width: 0;
-  //   }
-  // }
 
   &__settings{
     padding: 0 20px 20px 10px;
@@ -240,6 +227,22 @@
     }
     &_btnAdd{
       margin-top: 20px !important;
+    }
+  }
+  &__imageBlock{
+    @include flex(center, space-between);
+    padding: 15px;
+    border: 1px dashed rgba(78,145,217,0.5);
+    width: 100%;
+    height: 115px;
+    border-radius: 5px;
+    margin-bottom: 25px;
+
+    img{
+      width: 120px;
+      height: 80px;
+      border-radius: 3px;
+      object-fit: cover;
     }
   }
 }
