--- a/src/styles/pages/currentGame/ChooseColor.scss
+++ b/src/styles/pages/currentGame/ChooseColor.scss
@@ -1,3 +1,5 @@
+@import '../../core/base';
+@import '../../modules/buttons';
 .form_input{
   margin-bottom: 15px;
 }
@@ -50,15 +52,6 @@ body .radio_root{
       box-sizing: border-box;
     }
   }
-  &:nth-child(7){
-    div{
-      background-color: #fff !important;
-      background-image: url(../../../assets/images/icons/color.svg);
-      background-position: 50%;
-      background-repeat: no-repeat;
-      box-sizing: border-box;
-    }
-  }
 
   &:hover,
   &[class*="Mui-checked"]{
@@ -69,5 +62,17 @@ body .radio_root{
   svg{
     width: 0;
     height: 0;
+  }
+}
+.button{
+  &__customColor{
+    padding: 0px !important;
+    width: 32px;
+    height: 32px;
+    min-width: 32px !important;
+  }
+  &__customColorActive{
+    border: 1px solid #CEE1F6 !important;
+    background: rgba(112, 133, 156, 0.1) !important;
   }
 }
