--- a/src/js/utils/PtwModal/style.scss
+++ b/src/js/utils/PtwModal/style.scss
@@ -17,9 +17,11 @@
 
 .PtwModalRootGame {
   position: absolute;
-  bottom: -240px;
-  border-radius: 50%;
+  bottom: 0;
+  padding: 2px;
+  height: 308px;
   overflow: hidden;
+  display: flex;
   width: 100%;
   &__indicator {
     background-position: center center;
@@ -33,14 +35,15 @@
     width: 40px;
   }
   &__roullete {
-    border: 3px solid #ddd;
-    height: 480px;
-    width: 100%;
-    border-radius: 50%;
+    overflow: hidden;
+    border-radius: 0 0 12px 12px;
   }
-  // &_hide {
-  //   @extend .slide-out-blurred-bottom;
-  // }
+  & svg {
+    position: relative;
+    margin-left: -26px;
+    bottom: -42px;
+    width: 535px;
+  }
 }
 
 .PtwModalRootForm {
@@ -94,6 +97,7 @@
     border-radius: 4px;
     padding: 12px 15px;
     font-size: 14px;
+    font-weight: normal;
     color: #899BB0;
     width: 100%;
     @media screen and (max-width: 450px) {
@@ -102,22 +106,9 @@
     }
   }
   &__error {
-    // position: absolute;
-    // bottom: 0;
-    // left: 0;
     font-size: 11px;
     color: red;
   }
-
-  // &_start {
-  //   @extend .fade-in-top;
-  // }
-  // &_error {
-  //   @extend .shake-horizontal;
-  // }
-  // &_hide {
-  //   @extend .slide-out-blurred-top;
-  // }
 }
 
 
@@ -156,6 +147,9 @@
     padding-top: 15px;
     position: relative;
     width: 100%;
+    @media screen and (max-width: 1023px) {
+      min-width: 484px;
+    }
     @media screen and (max-width: 450px) {
       min-height: 425px;
     }
@@ -260,8 +254,8 @@
       position: absolute;
       left: 50%;
       top: 50%;
-      width: 13px;
-      height: 13px;
+      width: 12px;
+      height: 12px;
       margin-left: -7px;
       margin-top: -7px;
       opacity: 0.3;
@@ -298,7 +292,7 @@
   top: 0;
   height: 100%;
   width: 0;
-  z-index: 16777271;
+  z-index: 1001;
   &__button {
     // @extend .fade-in-right;
     background: none;
