--- a/src/styles/pages/currentGame/Content.scss
+++ b/src/styles/pages/currentGame/Content.scss
@@ -90,12 +90,11 @@
     height: 115px;
     border-radius: 5px;
     margin-bottom: 25px;
-
     img{
-      width: 120px;
-      height: 80px;
       border-radius: 3px;
-      object-fit: cover;
+      max-width: 100%;
+      max-height: 100%;
+      width: auto;
     }
   }
 }
