--- a/src/styles/pages/currentGame/PrimaryIcon.scss
+++ b/src/styles/pages/currentGame/PrimaryIcon.scss
@@ -47,16 +47,16 @@
     @include flex(center, space-between);
     padding: 15px;
     border: 1px dashed rgba(78,145,217,0.5);
-    width: 100%;
     height: 115px;
     border-radius: 5px;
     margin-bottom: 25px;
+    width: 100%;
 
     img{
-      width: 120px;
-      height: 80px;
       border-radius: 3px;
-      object-fit: cover;
+      max-width: 100%;
+      max-height: 100%;
+      width: auto;
     }
   }
 }
