--- a/src/js/utils/PtwModal/style.scss
+++ b/src/js/utils/PtwModal/style.scss
@@ -118,6 +118,7 @@
     border: 0;
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: 50%;
     border-radius: 12px;
     box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.6);
     display: flex;
@@ -132,6 +133,14 @@
     @media screen and (max-width: 450px) {
       border-radius: 0;
       height: 100%;
+    }
+    &_colorOverlay{
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border-radius: 12px;
     }
   }
   &__dialog {
