--- a/src/styles/pages/Home.css
+++ b/src/styles/pages/Home.css
@@ -180,7 +180,8 @@
   background: #fff;
   border: 1px solid #CEE1F6;
   border-radius: 5px;
-  margin-bottom: 35px; }
+  margin-bottom: 35px;
+  margin-top: 66px; }
   .home__websiteBlock_left {
     align-items: center;
     justify-content: left;
