--- a/src/styles/containers/Header.css
+++ b/src/styles/containers/Header.css
@@ -233,6 +233,9 @@
   .buttonGroup_offset {
     padding-bottom: 2.4rem; }
 
+.MuiButton-label {
+  margin-right: 20px; }
+
 .header {
   background-color: #fff;
   box-shadow: 0px 1px 2px -1px rgba(0, 0, 0, 0.2), 0px 0px 2px 0px rgba(0, 0, 0, 0.14), 0px 4px 0 -7px rgba(0, 0, 0, 0.12);
