--- a/src/styles/pages/Home.scss
+++ b/src/styles/pages/Home.scss
@@ -14,6 +14,7 @@
     border: 1px solid $color-blue-light;
     border-radius: 5px;
     margin-bottom: 35px;
+    margin-top: 66px;
 
     &_left{
       @include flex(center, left);
@@ -60,8 +61,8 @@
   &__welcome{
     @include flex(center, center);
     flex-direction: column;
-    border: 1px dashed rgba(78,145,217,0.5);	
-    border-radius: 4px;	
+    border: 1px dashed rgba(78,145,217,0.5);
+    border-radius: 4px;
     min-height: 480px;
     padding: 25px;
 
@@ -162,7 +163,7 @@
     }
     &_info{
       @include flex(flex-start, left, column);
-      
+
       div, ul{
         @include flex(center, left, row);
       }
@@ -176,7 +177,7 @@
         margin: 25px 0;
         li{
           font-size: 2.4rem;
-          font-weight: 600;  
+          font-weight: 600;
           margin-right: 30px;
           span{
             font-size: 1.2rem;
