feat: update style of constructor

--- a/src/styles/pages/currentGame/Content.scss
+++ b/src/styles/pages/currentGame/Content.scss
@@ -33,7 +33,7 @@
       height: 100%;
       padding: 30px;
       position: relative;
-      overflow: hidden;
+      overflow-y: auto;
       h4{
         text-transform: uppercase;
         font-size: 1.2rem;
